# kafka-tutorial-with-rust

./: Cargo.toml  README.md  docker-compose.yml
docker/cp-schema-registry/: haproxy.cfg
src/: consumer.rs  producer.rs
